# Qt_BlackJack_Ihor_test_task

./: .gitignore  CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  soundmanager.cpp  soundmanager.h
assets/cards/: cards.rar
src/logic/: blackjackgame.cpp  blackjackgame.h  card.cpp  card.h  deck.cpp  deck.h  hand.cpp  hand.h  player.cpp  player.h
src/ui/: carditem.cpp  carditem.h  gameview.cpp  gameview.h
